--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "gatsby-plugin-facebook-sdk",
-  "version": "1.0.6",
+  "name": "gatsby-plugin-facebook-customer-chat",
+  "version": "1.0.0",
   "description": "Gatsby plugin to integrate Facebook Javascript SDK on your project.",
-  "author": "Heeryong Kang <drakang4@gamil.com>",
+  "author": "Hieu Pham <mr_hie@yahoo.com>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/drakang4/gatsby-plugin-facebook-sdk.git"
+    "url": "https://github.com/mrhieu/gatsby-plugin-facebook-customer-chat"
   },
   "license": "MIT",
   "scripts": {
